@@ -13,7 +13,7 @@
 
 #if  0
 #define  CHANGE_DATE  "pre/@CHANGE_DATE@"
-#elif  0
+#elif  1
 #define  CHANGE_DATE  "post/@CHANGE_DATE@"
 #else
 #define  CHANGE_DATE  ""
