@@ -1,3 +1,14 @@
+2011-01-06  Araki Ken  <arakiken@users.sf.net>
+
+	* ml_edit.c:
+	  - If beg >= end (not beg > end), ml_edit_set_scroll_region fails.
+	  - wraparound is supported in vertical_tabs.
+
+	* ml_vt100_parser.c:
+	  - "ESC [ b"(REP) is supported.
+
+	* xwindow/version.h.in: 3.0.2 => 3.0.2 post
+
 2011-01-02  Araki Ken  <arakiken@users.sf.net>
 
 	* 3.0.2 released.
